# play-hdf5

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md
cpp/: CMakeLists.txt  example-02d-stdvector-struct.cpp  example-02e-eigen-matrix.cpp  example-04a-custom-struct-easy.cpp  example-04c-tables.cpp  example1.cpp
cpp2/: step1-install-h5pp.sh  step2-build-and-run-project.sh
cpp2/MyProject/source/: main.cpp
python/: play.py  play_v2.py  readback_v1.py
